k8s/overlays/dev/ingress-web.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: wsdemo-ingress
  namespace: wsdemo
spec:
  rules:
    - host: wsdemo.kopjra.com
      http:
        paths:
          - backend:
              serviceName: wsdemo-srv
              servicePort: 80
            path: /
